--- a/src/output/index.html
+++ b/src/output/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AstroPlanner</title>
-    <base href="https://github.com/jfcarr/astro-planner-web/" />
+    <base href="https://jfcarr.github.io/astro-planner-web/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="css/custom.css" />
